test de tarots segun casos de uso y postcondiciones